--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>AwesomeBus</title>
   </head>
   <body>
-    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <script src="awesomebus.js"></script>
+    <script src="awesomebus-bundle.js"></script>
   </body>
 </html>
