--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
   <body>
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="static/d3.geo.tile.min.js"></script>
-    <script src="static/static-awesomebus-bundle.js"></script>
+    <script src="awesomebus.js"></script>
   </body>
 </html>
