Massive purge and cleanup
- Remove node.js related files
- Remove Flask server and related files
- Move data setup and extraction code to /data
- Remove unused data

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </head>
   <body>
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <script src="static/d3.geo.tile.min.js"></script>
+    <script src="lib/d3.geo.tile.min.js"></script>
     <script src="awesomebus.js"></script>
   </body>
 </html>
