--- a/index.html
+++ b/index.html
@@ -4,33 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AwesomeBus</title>
-    <style>
-      body {
-        margin: 0;
-      }
-
-      .path {
-        fill: none;
-        stroke: red;
-      }
-
-      .ocean, .water, .riverbank, .resevoir {
-        fill: #468ba4;
-        stroke: #468ba4;
-      }
-
-      .major_road, .minor_road, .highway, .rail {
-        fill: none;
-        stroke: #000;
-        stroke-linejoin: round;
-        stroke-linecap: round;
-      }
-
-      .major_road { stroke: #776; }
-      .minor_road { stroke: #ccb; }
-      .highway { stroke: #d4b24b; stroke-width: 1.5px; }
-      .rail { stroke: #7de; }
-    </style>
+    <link rel="stylesheet" type="text/css" href="awesomebus.css">
   </head>
   <body>
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
