Add non-functional route panel

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" type="text/css" href="awesomebus.css">
   </head>
   <body>
+    <div id="ui-overlay">
+      <input placeholder="Route" type="text"></input>
+    </div>
+
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="lib/d3.geo.tile.min.js"></script>
     <script src="awesomebus.js"></script>
