Add interactive search with text box, put selected route on top

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="ui-overlay">
-      <input placeholder="Route" type="text"></input>
+      <input id="route-input" placeholder="Route" type="text"></input>
     </div>
 
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
