Show selected route in the panel when clicked

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <div id="ui-overlay">
-      <input id="route-input" placeholder="Route" type="text"></input>
+      <input id="route-input" placeholder="Route" type="text" autofocus></input>
+      <div id="selected-route">
+        <h3 id="selected-heading">Selected Route</h3>
+        <span id="selected-text"></span>
+      </div>
     </div>
 
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
