Adjust text and positioning in panel

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   </head>
   <body>
     <div id="ui-overlay">
+      <h3 id="title">AwesomeBus</h3>
       <input id="route-input" placeholder="Route" type="text" autofocus></input>
       <div id="selected-route">
         <h3 id="selected-heading">Selected Route</h3>
         <span id="selected-text"></span>
       </div>
+      <span id="source">Sources: King County Metro, OpenStreetMap</span>
     </div>
 
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
