--- a/index.html
+++ b/index.html
@@ -8,13 +8,20 @@
   </head>
   <body>
     <div id="ui-overlay">
-      <h3 id="title">AwesomeBus</h3>
-      <input id="route-input" placeholder="Route" type="text" autofocus></input>
+      <h3 id="title" class="ui-item">AwesomeBus</h3>
+      <p id="subtitle" class="ui-item">
+        A d3.js visualization of mass transit routes in the Seattle metropolitan area
+      </p>
+      <input id="route-input" class="ui-item" placeholder="Route" type="text" autofocus></input>
+      <button type="button" id="reset">Reset</button>
       <div id="selected-route">
-        <h3 id="selected-heading">Selected Route</h3>
-        <span id="selected-text"></span>
+        <h3 id="selected-heading" class="ui-item">Selected Route</h3>
+        <span id="selected-text" class="ui-item"></span>
       </div>
-      <span id="source">Sources: King County Metro, OpenStreetMap</span>
+      <div class="footer">
+        <span>Eric Zeng and Lucy Simko</span><br/>
+        <span>Sources: King County Metro, OpenStreetMap</span>
+      </div>
     </div>
 
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
