double-click to select all intersecting routes

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <span>Sources: King County Metro, OpenStreetMap</span>
       </div>
     </div>
-
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="lib/d3.geo.tile.min.js"></script>
+    <script src="lib/geojson-js-utils-master/geojson-utils.js"></script>
     <script src="awesomebus.js"></script>
   </body>
 </html>
