added a slider to show when buses run. also redid selection to use d3 classes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AwesomeBus</title>
     <link rel="stylesheet" type="text/css" href="awesomebus.css">
+    <link rel="stylesheet" type="text/css" href="lib/d3-slider-master/d3.slider.css">
   </head>
   <body>
     <div id="ui-overlay">
@@ -23,9 +24,11 @@
         <span>Sources: King County Metro, OpenStreetMap</span>
       </div>
     </div>
+    <div id="slider"> </div>
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="lib/d3.geo.tile.min.js"></script>
     <script src="lib/geojson-js-utils-master/geojson-utils.js"></script>
+    <script src="lib/d3-slider-master/d3.slider.js"></script>
     <script src="awesomebus.js"></script>
   </body>
 </html>
