--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AwesomeBus</title>
+    <link href='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css' rel='stylesheet' />
     <link rel="stylesheet" type="text/css" href="awesomebus.css">
     <link rel="stylesheet" type="text/css" href="lib/d3-slider-master/d3.slider.css">
   </head>
@@ -25,10 +26,12 @@
       </div>
     </div>
     <div id="slider"> </div>
+
+    <script src='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js'></script>
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <script src="lib/d3.geo.tile.min.js"></script>
     <script src="lib/geojson-js-utils-master/geojson-utils.js"></script>
     <script src="lib/d3-slider-master/d3.slider.js"></script>
     <script src="awesomebus.js"></script>
+
   </body>
 </html>
