--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css' rel='stylesheet' />
     <link rel="stylesheet" type="text/css" href="awesomebus.css">
     <link rel="stylesheet" type="text/css" href="lib/d3-slider-master/d3.slider.css">
+    <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-draw/v0.2.3/leaflet.draw.css' rel='stylesheet' />
+
   </head>
   <body>
     <div id="ui-overlay">
@@ -31,6 +33,8 @@
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="lib/geojson-js-utils-master/geojson-utils.js"></script>
     <script src="lib/d3-slider-master/d3.slider.js"></script>
+    <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-draw/v0.2.3/leaflet.draw.js'></script>
+    <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-geodesy/v0.1.0/leaflet-geodesy.js'></script>
     <script src="awesomebus.js"></script>
 
   </body>
