Convert floating panel to a sidebar, tweak CSS throughout
Remove redundant/unused styles

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AwesomeBus</title>
     <link href='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css' rel='stylesheet' />
-    <link rel="stylesheet" type="text/css" href="awesomebus.css">
-    <link rel="stylesheet" type="text/css" href="lib/d3-slider-master/d3.slider.css">
     <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-draw/v0.2.3/leaflet.draw.css' rel='stylesheet' />
+    <link rel="stylesheet" type="text/css" href="lib/d3-slider-master/d3.slider.css">
+    <link rel="stylesheet" type="text/css" href="awesomebus.css">
   </head>
   <body>
-    <div id="ui-overlay">
+    <div id="sidebar">
       <h3 id="title" class="ui-item">AwesomeBus</h3>
       <p id="subtitle" class="ui-item">
         A d3.js visualization of mass transit routes in the Seattle metropolitan area
