Add tutorial to sidebar

--- a/index.html
+++ b/index.html
@@ -14,8 +14,17 @@
     <div id="sidebar">
       <h3 id="title" class="ui-item">AwesomeBus</h3>
       <p id="subtitle" class="ui-item">
-        A d3.js visualization of mass transit routes in the Seattle metropolitan area
+        An interactive visualization of Seattle-area public transportation.
       </p>
+      <h3 class="ui-item">Tutorial</h3>
+      <ul id="instructions">
+        <li><strong>Zoom</strong> in to view bus stops</li>
+        <li><strong>Click</strong> on a route or type in a route number to see where it goes</li>
+        <li><strong>Click</strong> on stops to see its routes and real time arrival data</li>
+        <li>Select all routes in an area using the <strong>shape tool</strong></li>
+        <li><strong>Double-click</strong> on a route to see transfers</li>
+
+      </ul>
       <input id="route-input" class="ui-item" placeholder="Route" type="text" autofocus></input>
       <button type="button" id="reset">Reset</button>
       <div id="stop-info">
